--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="description" content="Surströmming">
+        <meta name="keywords" content="surströmming, smak, naturen, gröna störmmingen">
         <title>Surströmming</title>
         <link rel="stylesheet" href="CSS/style.css">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
@@ -76,18 +78,26 @@
 
             <section class="surströmming-produkt">
                 <div id="värnen">
+                    <img src="Bilder/Produkt_bilder/värnen.png" title="Värnen" alt="Värnen smak"
+                    width="0" height="0">
                     <div class="produkt_window"></div>
                     <h2>Värnen</h2>
                 </div>
                 <div id="björnstad_flugsvamp">
+                    <img src="Bilder/Produkt_bilder/flugsvamp.png" title="Björnstads fluggsvamp" alt="Björnstads fluggsvamp smak"
+                    width="0" height="0">
                     <div class="produkt_window"></div>
                     <h2>Björnstads fluggsvamp</h2>
                 </div>
                 <div id="värmlands_skog">
+                    <img src="Bilder/Produkt_bilder/skog.png" title="Värmlands skog" alt="Värmlands skog smak"
+                    width="0" height="0">
                     <div class="produkt_window"></div>
                     <h2>Värmlands skogg</h2>
                 </div>
                 <div id="tropisk_sten">
+                    <img src="Bilder/Produkt_bilder/sten.png" title="Tropisk sten" alt="Tropisk sten smak"
+                    width="0" height="0">
                     <div class="produkt_window"></div>
                     <h2>Tropisk sten</h2>
                 </div>
