--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
     <html lang="en">
     <head>
         <meta charset="UTF-8">
+        <test></test>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content="Surströmming">
         <meta name="keywords" content="surströmming, smak, naturen, gröna störmmingen">
