--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
     <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <test></test>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content="Surströmming">
         <meta name="keywords" content="surströmming, smak, naturen, gröna störmmingen">
@@ -24,22 +23,25 @@
                 <main>
                     <div id="mainimage">
                     </div>
-
-                    <text id="text">
+                    <h1 id="text">
                     
                         Föreställ dig smaken av det svenska friluftslivet – den friska luften,
                         doften av tallskog och suset från en stilla fjällbäck – förpackad i en burk.
                         Hos oss hittar du en unik version av Sveriges mest ikoniska delikatess:
                         surströmming med smak av naturen, skapad för att göra skillnad både på middagsbordet och för vårt klimat.
 
-                    </text>
+                    </h1>
                     <div class="celebirty">
                         <div id="blomm">
+                            <img src="Bilder/celebirty/blomm.png" alt="Blomm"
+                             width="0" height="0">
                             <div id="blomm_box">
                                 "Det är förjädrans bra surströmming"
                             </div>
                         </div>
                         <div id="rock">
+                            <img src="Bilder/celebirty/rock.png" alt="Rock"
+                             width="0" height="0">
                             <div id="rock_box">
                                 "This surströmming is really something else"
                              </div>
@@ -50,15 +52,23 @@
                         <div id="celebirty_window">
                             <div class ="famous">
                                 <div id="elon_musk">
+                                    <img src="Bilder/celebirty/elon_musk.jpg" alt="Elon Musk"
+                                     width="0" height="0">
                                     <div class="celebirty_box">"After I tasted, I invested"</div>
                                 </div>
                                 <div id="daidalos">
+                                     <img src="Bilder/celebirty/daidalos.jpg" alt="Daidalos"
+                                     width="0" height="0">
                                     <div class="celebirty_box">"Äter detta varje gång innan labyrint gigget"</div>
                                 </div>
                                 <div id="alex_jones">
+                                    <img src="Bilder/celebirty/alex_jones.jpg" alt="Alex Jones"
+                                     width="0" height="0">
                                      <div class="celebirty_box">"It is not a conspiracy that this surströmming is good"</div>
                                 </div>
                                 <div id="king">
+                                    <img src="Bilder/celebirty/king.jpg" alt="King"
+                                     width="0" height="0">
                                     <div class="celebirty_box">"Surströmming for the big boys"</div>
                                 </div>
                             </div>
@@ -103,25 +113,35 @@
                     <h2>Tropisk sten</h2>
                 </div>
                 <div id="mossig_bark">
+                    <img src="Bilder/Produkt_bilder/bark.png" title="Mossig Bark" alt="Mossig Bark smak"
+                    width="0" height="0">
                     <div class="produkt_window"></div>
                     <h2>Mossig Barrk</h2>
                 </div>
 
                 <div id="skånsk_betesmark">
+                    <img src="Bilder/Produkt_bilder/betesmark.png" title="Skånsk betesmark" alt="Skånsk betesmark smak"
+                    width="0" height="0">
                     <div class="produkt_window"></div>
                     <h2>Skånsk betesmark</h2>
                 </div>
 
                 <div id="ölands_sand">
+                    <img src="Bilder/Produkt_bilder/sand.png" title="Ölands sand" alt="Ölands sand smak"
+                    width="0" height="0">
                     <div class="produkt_window"></div>
                     <h2>Ölands sand</h2>
                 </div>
 
                 <div id="stockholms_blommor">
+                    <img src="Bilder/Produkt_bilder/blommor.png" title="Stockholms blommor" alt="Stockholms blommor smak"
+                    width="0" height="0">
                     <div class="produkt_window"></div>
                     <h2>Stockholms blommor</h2>
                 </div>
                 <div id="göteborg_kust_crust">
+                    <img src="Bilder/Produkt_bilder/kust_crust.png" title="Göteborgs Kust Crust" alt="Göteborgs Kust Crust smak"
+                    width="0" height="0">
                     <div class="produkt_window"></div>
                     <h2>Göteborgs Kust Crust</h2>
                 </div>
