--- a/index.html
+++ b/index.html
@@ -23,14 +23,14 @@
                 <main>
                     <div id="mainimage">
                     </div>
-                    <h1 id="text">
+                    <p id="text">
                     
                         Föreställ dig smaken av det svenska friluftslivet – den friska luften,
                         doften av tallskog och suset från en stilla fjällbäck – förpackad i en burk.
                         Hos oss hittar du en unik version av Sveriges mest ikoniska delikatess:
                         surströmming med smak av naturen, skapad för att göra skillnad både på middagsbordet och för vårt klimat.
 
-                    </h1>
+                    </p>
                     <div class="celebirty">
                         <div id="blomm">
                             <img src="Bilder/celebirty/blomm.png" alt="Blomm"
@@ -148,11 +148,11 @@
 
             </section>
             <footer>
-                <p id="om_oss" href="google.com">Om oss</p>
-                <p id="företag">Företagsinformation</p>
-                <p id="kontakt">Kontaktinformation</p>
-                <p id="privat">Privatlivspolicy</p>
-                <p id="twitter">Twitter</p>
+                <div id="om_oss">Om oss</div>
+                <div id="företag">Företagsinformation</div>
+                <div id="kontakt">Kontaktinformation</div>
+                <div id="privat">Privatlivspolicy</div>
+                <div id="twitter">Twitter</div>
             </footer>
         </div>
     </body>
