--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
             <header>
             </header>
             <div id="maindiv">    
-                <aside class="reklam">
-                </aside>
+                <a class="reklam" href="https://xn--nyastrmmen-jcb.ture.fish/">
+                </a>
                 <main>
                     <div id="mainimage">
                     </div>
