--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
                         </div>
                     </div>
                 </main>
-                <aside class="reklam">    
-                </aside>
+                <a class="reklam" href="https://xn--nyastrmmen-jcb.ture.fish/">    
+                </a>
             </div>
 
             <div class="counters">
