--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="description" content="Surströmming">
-        <meta name="keywords" content="surströmming, smak, naturen, gröna störmmingen">
+        <meta name="description" content="Gröna strömmingen">
+        <meta name="keywords" content="surströmming, gröna strömmingen, smak, naturen, gröna störmmingen">
         <title>Surströmming</title>
         <link rel="stylesheet" href="CSS/style.css">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
