--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                 <div id="om_oss">Om oss</div>
                 <div id="företag">Företagsinformation</div>
                 <div id="kontakt">Kontaktinformation</div>
-                <div id="privat">Privatlivspolicy</div>
+                <div id="privat">PrivatPolicy</div>
                 <div id="twitter">Twitter</div>
             </footer>
         </div>
