--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <body>
         <div id="wrapper">
             <nav>
-                <h1>Gröna störmmingen</h1>
+                <h1>Gröna strömmingen</h1>
             </nav>
             <header>
             </header>
