--- a/index.html
+++ b/index.html
@@ -75,9 +75,9 @@
             </div>
 
             <section class="surströmming-produkt">
-                <div id="värnen">
+                <div id="vänern">
                     <div class="produkt_window"></div>
-                    <h2>Värnen</h2>
+                    <h2>Vänern</h2>
                 </div>
                 <div id="björnstad_flugsvamp">
                     <div class="produkt_window"></div>
