--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                                     <div class="celebirty_box">"Surströmming for the big boys"</div>
                                 </div>
                             </div>
-                            <div id="close_button">njkkljk</div>
+                            <div id="close_button">Exit</div>
                         </div>
                     </div>
                 </main>
