--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
                         surströmming med smak av naturen, skapad för att göra skillnad både på middagsbordet och för vårt klimat.
 
                     </p>
+                    <!--Måste ha stock foton för att Dane är tråkig, 
+                    men har fortfarande kvar ids namn, så det är med flitt och inte ett mistag-->
                     <div class="celebirty">
                         <div id="blomm">
                             <div id="blomm_box">
